[package]
name = "gpt-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.0"
bincode = "1.3.3"
clap = "4.1.13"
directories = "5.0.0"
reqwest = { version = "0.11.16",  features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
sled = "0.34.7"
tokio = { version = "1.26.0", features = ["macros"] }
